<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/nav_chat" />
    <item
        android:id="@+id/quizFragment"
        android:icon="@drawable/ic_quiz"
        android:title="@string/nav_quiz" />
    <item
        android:id="@+id/flashcardFragment"
        android:icon="@drawable/ic_flashcard"
        android:title="@string/nav_flashcards" />
    <item
        android:id="@+id/progressFragment"
        android:icon="@drawable/ic_progress"
        android:title="@string/nav_progress" />
</menu>
